[package]
name = "coptrs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "coptrs"
# crate-type = ["cdylib"] # NOTE prevents criterion to work

[dependencies]
pyo3 = { version = "0.23.3"}

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
rand = "0.9.0"

[[bench]]
name = "base"
harness = false
